--- a/appointments.html
+++ b/appointments.html
@@ -1,4 +1,4 @@
-<script src="js/socket.io.js"></script>
+<script src="/socket.io/socket.io.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
 <style>
@@ -33,7 +33,7 @@ function getUrlVars() {
     return vars;
   }
 
-var socket = io.connect('http://127.0.0.1:8090');
+var socket = io.connect();
  
 socket.on("doctors", function(data) {
   console.log(data);
